@@ -1,11 +1,16 @@
 
 #include "stdafx.h"
+#include "GUIWindow.h"
 #include "GUIWindowVideoInfo.h"
 #include "util.h"
 #include "picture.h"
 #include "application.h"
 #include "VideoDatabase.h"
 #include "GUIImage.h"
+#include "StringUtils.h"
+#include "GUIListControl.h"
+#include "GUIWindowVideoBase.h"
+#include "GUIWindowVideoFiles.h"
 
 #define CONTROL_TITLE    20
 #define CONTROL_DIRECTOR   21
@@ -20,12 +25,14 @@
 #define CONTROL_RATING_AND_VOTES  30
 #define CONTROL_RUNTIME    31
 
-
 #define CONTROL_IMAGE    3
 #define CONTROL_TEXTAREA    4
 
 #define CONTROL_BTN_TRACKS   5
 #define CONTROL_BTN_REFRESH   6
+#define CONTROL_BTN_PLAY      8
+
+#define CONTROL_LIST            50
 #define CONTROL_DISC             7
 
 CGUIWindowVideoInfo::CGUIWindowVideoInfo(void)
@@ -42,11 +49,15 @@ bool CGUIWindowVideoInfo::OnMessage(CGUIMessage& message)
   case GUI_MSG_WINDOW_DEINIT:
     {
       m_pMovie = NULL;
+      m_database.Close();
     }
     break;
 
   case GUI_MSG_WINDOW_INIT:
     {
+      m_database.Open();
+      m_dlgProgress = (CGUIDialogProgress*)m_gWindowManager.GetWindow(WINDOW_DIALOG_PROGRESS);
+
       m_bRefresh = false;
       CGUIDialog::OnMessage(message);
       m_bViewReview = true;
@@ -127,13 +138,16 @@ bool CGUIWindowVideoInfo::OnMessage(CGUIMessage& message)
         Close();
         return true;
       }
-
-      if (iControl == CONTROL_BTN_TRACKS)
+      else if (iControl == CONTROL_BTN_TRACKS)
       {
         m_bViewReview = !m_bViewReview;
         Update();
       }
-      if (iControl == CONTROL_DISC)
+      else if (iControl == CONTROL_BTN_PLAY)
+      {
+        Play();
+      }
+      else if (iControl == CONTROL_DISC)
       {
         int iItem = 0;
         CGUIMessage msg(GUI_MSG_ITEM_SELECTED, GetID(), iControl, 0, 0, NULL);
@@ -147,10 +161,8 @@ bool CGUIWindowVideoInfo::OnMessage(CGUIMessage& message)
           sscanf(m_pMovie->m_strSearchString.c_str(), "%i", &lMovieId);
           if (lMovieId > 0)
           {
-            CVideoDatabase dbs;
-            dbs.Open();
             CStdString label;
-            dbs.GetDVDLabel(lMovieId, label);
+            m_database.GetDVDLabel(lMovieId, label);
             int iPos = label.Find("DVD#");
             if (iPos >= 0)
             {
@@ -159,9 +171,22 @@ bool CGUIWindowVideoInfo::OnMessage(CGUIMessage& message)
             label = label.TrimRight(" ");
             label += " ";
             label += strItem;
-            dbs.SetDVDLabel( lMovieId, label);
-            dbs.Close();
+            m_database.SetDVDLabel( lMovieId, label);
           }
+        }
+      }
+      else if (iControl == CONTROL_LIST)
+      {
+        int iAction = message.GetParam1();
+        if (ACTION_SELECT_ITEM == iAction)
+        {
+          CGUIMessage msg(GUI_MSG_ITEM_SELECTED, GetID(), iControl, 0, 0, NULL);
+          g_graphicsContext.SendMessage(msg);
+          int iItem = msg.GetParam1();
+          CStdString strItem = m_vecStrCast[iItem];
+          int iPos = strItem.Find(" as ");
+          if (iPos > 0)
+            OnSearch(strItem.Left(iPos));
         }
       }
     }
@@ -236,18 +261,36 @@ void CGUIWindowVideoInfo::Update()
   strTmp = m_pMovie->m_strRuntime; strTmp.Trim();
   SetLabel(CONTROL_RUNTIME, strTmp.c_str() );
 
+  // setup plot text area
+  strTmp = m_pMovie->m_strPlot; strTmp.Trim();
+  SET_CONTROL_LABEL(CONTROL_TEXTAREA, strTmp.c_str() );
+
+  // setup cast list
+  strTmp = m_pMovie->m_strCast; strTmp.Trim();
+  m_vecStrCast.clear();
+  vector<CStdString> vecCast;
+  int iNumItems = StringUtils::SplitString(strTmp, "\n", vecCast);
+  for (int i = 0; i < (int)vecCast.size(); i++)
+  {
+    int iPos = vecCast[i].Find(" as ");
+    if (iPos > 0)
+      m_vecStrCast.push_back(vecCast[i]);
+  }
+  AddItemsToList(m_vecStrCast);
+
   if (m_bViewReview)
   {
-    strTmp = m_pMovie->m_strPlot; strTmp.Trim();
-    SET_CONTROL_LABEL(CONTROL_TEXTAREA, strTmp.c_str() );
     SET_CONTROL_LABEL(CONTROL_BTN_TRACKS, 206);
+    
+    SET_CONTROL_HIDDEN(CONTROL_LIST);
+    SET_CONTROL_VISIBLE(CONTROL_TEXTAREA);
   }
   else
   {
-    strTmp = m_pMovie->m_strCast; strTmp.Trim();
-    SET_CONTROL_LABEL(CONTROL_TEXTAREA, strTmp.c_str() );
     SET_CONTROL_LABEL(CONTROL_BTN_TRACKS, 207);
 
+    SET_CONTROL_HIDDEN(CONTROL_TEXTAREA);
+    SET_CONTROL_VISIBLE(CONTROL_LIST);
   }
 }
 
@@ -336,4 +379,108 @@ void CGUIWindowVideoInfo::Refresh()
 bool CGUIWindowVideoInfo::NeedRefresh() const
 {
   return m_bRefresh;
+}
+
+/// \brief Search the current directory for a string got from the virtual keyboard
+void CGUIWindowVideoInfo::OnSearch(CStdString& strSearch)
+{
+  if (m_dlgProgress)
+  {
+    m_dlgProgress->SetHeading(194);
+    m_dlgProgress->SetLine(0, strSearch);
+    m_dlgProgress->SetLine(1, L"");
+    m_dlgProgress->SetLine(2, L"");
+    m_dlgProgress->StartModal(GetID());
+    m_dlgProgress->Progress();
+  }
+  CFileItemList items;
+  DoSearch(strSearch, items);
+
+  if (items.Size())
+  {
+    CGUIDialogSelect* pDlgSelect = (CGUIDialogSelect*)m_gWindowManager.GetWindow(WINDOW_DIALOG_SELECT);
+    pDlgSelect->Reset();
+    pDlgSelect->SetHeading(283);
+    CUtil::SortFileItemsByName(items);
+
+    for (int i = 0; i < (int)items.Size(); i++)
+    {
+      CFileItem* pItem = items[i];
+      pDlgSelect->Add(pItem->GetLabel());
+    }
+
+    pDlgSelect->DoModal(GetID());
+
+    int iItem = pDlgSelect->GetSelectedLabel();
+    if (iItem < 0)
+    {
+      if (m_dlgProgress) m_dlgProgress->Close();
+      return ;
+    }
+
+    CFileItem* pSelItem = new CFileItem(*items[iItem]);
+
+    OnSearchItemFound(pSelItem);
+
+    delete pSelItem;
+    if (m_dlgProgress) m_dlgProgress->Close();
+  }
+  else
+  {
+    if (m_dlgProgress) m_dlgProgress->Close();
+    CGUIDialogOK::ShowAndGetInput(194, 284, 0, 0);
+  }
+}
+
+/// \brief Make the actual search for the OnSearch function.
+/// \param strSearch The search string
+/// \param items Items Found
+void CGUIWindowVideoInfo::DoSearch(CStdString& strSearch, CFileItemList& items)
+{
+  VECMOVIES movies;
+  m_database.GetMoviesByActor(strSearch, movies);
+  for (int i = 0; i < (int)movies.size(); ++i)
+  {
+    CStdString strItem = movies[i].m_strTitle;
+    CStdString strYear;
+    strYear.Format(" (%i)", movies[i].m_iYear);
+    strItem += strYear;
+    CFileItem *pItem = new CFileItem(strItem);
+    pItem->m_strPath = movies[i].m_strSearchString;
+    items.Add(pItem);
+  }
+}
+
+/// \brief React on the selected search item
+/// \param pItem Search result item
+void CGUIWindowVideoInfo::OnSearchItemFound(const CFileItem* pItem)
+{
+  long lMovieId = atol(pItem->m_strPath);
+  CIMDBMovie movieDetails;
+  m_database.GetMovieInfo(pItem->m_strPath, movieDetails, lMovieId);
+  m_Movie = movieDetails;
+  SetMovie(m_Movie);
+  Refresh();
+}
+
+void CGUIWindowVideoInfo::AddItemsToList(const vector<CStdString> &vecStr)
+{
+  CGUIMessage msg(GUI_MSG_LABEL_RESET, GetID(), CONTROL_LIST, 0, 0, NULL);
+  g_graphicsContext.SendMessage(msg);
+
+  for (int i = 0; i < (int)vecStr.size(); i++)
+  {
+    CGUIListItem* pItem = new CGUIListItem(vecStr[i]);
+    CGUIMessage msg(GUI_MSG_LABEL_ADD, GetID(), CONTROL_LIST, 0, 0, (void*)pItem);
+    g_graphicsContext.SendMessage(msg);
+  }
+}
+
+void CGUIWindowVideoInfo::Play()
+{
+  VECMOVIESFILES movies;
+  m_database.GetFiles(atol(m_pMovie->m_strSearchString), movies);
+
+  CGUIWindowVideoFiles* pWindow = (CGUIWindowVideoFiles*)m_gWindowManager.GetWindow(WINDOW_VIDEOS);
+  if (pWindow) pWindow->PlayMovies(movies, 0);
 }
